--- a/app.json
+++ b/app.json
@@ -3,8 +3,20 @@
     "name": "MeetMeHalfway",
     "slug": "MeetMeHalfway",
     "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ]
+    "assetBundlePatterns": ["**/*"],
+    "android": {
+      "package": "com.yourcompany.meetmehalfway",
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyDASA8fmLTGHD2P2wTN5Bh9S5NKOET-Gtc"
+        }
+      }
+    },
+    "ios": {
+      "bundleIdentifier": "com.yourcompany.meetmehalfway",
+      "config": {
+        "googleMapsApiKey": "AIzaSyDASA8fmLTGHD2P2wTN5Bh9S5NKOET-Gtc"
+      }
+    }
   }
 }
