--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.21",
     "axios": "^1.6.7",
-    "expo": "~50.0.7",
+    "expo": "^50.0.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "^2.15.0",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
